--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   </head>
   <body>
     <div class="main">
-      <h3>Guess Number 1 to 100</h3>
+      <h3>Guess Number 1 to 300</h3>
       <div class="again">
         <button class="btn">Play Again</button>
       </div>
@@ -26,7 +26,12 @@
         <span><p></p></span>
       </div>
       <form action="" class="formArea">
-        <input type="number" placeholder="Enter number" class="formValue" />
+        <input
+          type="number"
+          placeholder="Enter number"
+          required
+          class="formValue"
+        />
         <button type="submit">Submit</button>
       </form>
       <div class="aside">
